--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,11 @@
 {
   "presets": ["next/babel"],
   "plugins": [
-    [
-      "styled-components",
+    ["styled-components",
       {
         "ssr": true,
         "displayName": true,
         "preprocess": false
-      }
-    ]
+      }]
   ]
 }
