--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended"
-  ],
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true
-  },
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": { "jsx": true },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "settings": {
-    "react": { "version": "detect" }
-  },
-  "plugins": ["react"],
-  "rules": {
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "no-multi-spaces": ["error"]
-  }
+  "extends": "next/core-web-vitals"
 }
