--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "shaun-charlotte",
+  "name": "nextjs-with-styled-components-typescript",
+  "version": "5.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
-    "css-loader": "^6.5.1",
-    "next": "12.0.3",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "latest",
+    "@mui/styled-engine-sc": "latest",
+    "next": "latest",
+    "next-transpile-modules": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-is": "latest",
+    "styled-components": "latest"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "babel-plugin-styled-components": "^1.13.3",
+    "@types/react": "latest",
+    "@types/styled-components": "latest",
+    "babel-plugin-styled-components": "latest",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.4",
+    "typescript": "latest"
   }
 }
