db connection test

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://sapeur90:Girdle6-Footsie-Purgatory@cluster0.vyotu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 MONGODB_DB=
