Functional getStaticProps example, setup https, some mongodb setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,9 +27,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "server.mjs"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
