--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "serve": "node server.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +16,7 @@
     "@mui/material": "latest",
     "@mui/styled-engine-sc": "latest",
     "mongodb": "^4.2.1",
-    "next": "latest",
+    "next": "^12.0.7",
     "next-transpile-modules": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -23,10 +24,14 @@
     "styled-components": "latest"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.7",
+    "@types/node": "^16.11.11",
     "@types/react": "latest",
     "@types/styled-components": "latest",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "babel-plugin-styled-components": "latest",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "latest"
   }
