--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "serve": "node server.mjs",
+    "serve": "node server.cjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,14 +25,17 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/react": "latest",
     "@types/styled-components": "latest",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "babel-plugin-styled-components": "latest",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.28.0",
     "typescript": "latest"
   }
 }
