--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.2.0",
@@ -20,8 +22,8 @@
     "next-transpile-modules": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-is": "latest",
-    "styled-components": "latest"
+    "react-hook-form": "^7.22.5",
+    "react-is": "latest"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
