--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "paths": {
-      "@mui/styled-engine": [
-        "./node_modules/@mui/styled-engine-sc"
-      ] // this mapping is relative to "baseUrl"
-    },
+    "jsxImportSource": "@emotion/react",
     "incremental": true
   },
   "include": [
