rest of cleanup

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://sapeur90:Girdle6-Footsie-Purgatory@cluster0.vyotu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 MONGODB_DB=shaun-charlotte
-NODE_ENV=development
+NODE_ENV=production
