Make app details available only to guests, add order of service, add map to location

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@emotion/styled": "^11.6.0",
     "@js-temporal/polyfill": "^0.3.0",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^5.9.0",
     "@sentry/nextjs": "^6.19.6",
     "mongodb": "^4.2.1",
-    "next": "^12.1.0",
+    "next": "^12.1.5",
     "next-transpile-modules": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.22.5",
     "react-is": "latest"
   },
