--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.9.0",
     "@sentry/nextjs": "^6.19.6",
+    "iron-session": "^6.1.3",
     "mongodb": "^4.2.1",
     "next": "^12.1.5",
     "next-transpile-modules": "latest",
+    "octokit": "^1.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.22.5",
     "react-is": "latest",
+    "swr": "^1.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
+    "@octokit/types": "^6.34.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/react": "^18.0.8",
