--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "node server.cjs",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "tsc && jest"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -34,7 +35,10 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
     "@octokit/types": "^6.34.0",
-    "@types/jest": "^27.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^16.11.11",
     "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -43,6 +47,8 @@
     "eslint-config-next": "12.0.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.28.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "latest"
   }
 }
