--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.10",
-    "@js-temporal/polyfill": "^0.3.0",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "latest",
@@ -25,17 +24,14 @@
     "mongodb": "^4.2.1",
     "next": "^12.1.5",
     "next-transpile-modules": "latest",
-    "octokit": "^1.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.22.5",
     "react-is": "latest",
-    "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
-    "@octokit/types": "^6.34.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
